# alx-connect

./: .dockerignore  Dockerfile  README.md  pyproject.toml  setup.py
alx_connect/: main.py
alx_connect/api/: routes.py
alx_connect/config/: config.py
alx_connect/models/: chat.py  profile.py
alx_connect/services/: cv_review.py  interview_coach.py  matching.py
tests/: conftest.py
tests/api/: test_routes.py
tests/models/: test_models.py
tests/services/: test_cv_review.py  test_interview_coach.py  test_matching.py
